--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <ul class="menu">
-            <li><a href="bemvindo.html">Bem Vindo</a></li>
+            <li><a href="index.html">Bem Vindo</a></li>
             <li><a href="sobre.html">Sobre os Noivos</a></li>
             <li><a href="#">O Casamento</a>
                 <ul>
