--- a/ocasamento.html
+++ b/ocasamento.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suellen & Alisson</title>
-    <link rel="stylesheet" href="./css/fundo.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/cronometro.css">
     <link rel="stylesheet" href="./css/ocasamento.css">
@@ -29,7 +28,7 @@
             </li>
             <li><a href="#">Presentes</a>
                 <ul>
-                    <li><a href="#">Lista de Presentes</a></li>
+                    <li><a href="#">Sujestão de Presentes</a></li>
                     <li><a href="transferencia.html">Trânsferencia</a></li>
                 </ul>
             </li>
@@ -39,6 +38,16 @@
     <div class="nomenoivos">
         <nav>
             <h2>Suellen & Alisson</h2>
+            <h3>
+    <pre> 
+    Você esta convidado para o nosso casamento
+    Que se realizará na:
+    Rua.:
+    Numero.:
+    Estado.:
+    Pais.:
+    </pre>
+            </h3>
         </nav>
     </div>
     <div class="mapa">
