--- a/sobre.html
+++ b/sobre.html
@@ -27,7 +27,7 @@
             </li>
             <li><a href="#">Presentes</a>
                 <ul>
-                    <li><a href="#">Lista de Presentes</a></li>
+                    <li><a href="#">Sujestão de Presentes</a></li>
                     <li><a href="transferencia.html">Trânsferencia</a></li>
                 </ul>
             </li>
