--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#">Presentes</a>
                 <ul>
                     <li><a href="#">Sujestão de Presentes</a></li>
-                    <li><a href="transferencia.html">Trânsferencia</a></li>
+                    <li><a href="transferencia.html">Transferência</a></li>
                 </ul>
             </li>
             <li><a href="#">Contato</a></li>
