--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav>
             <h2>Suellen & Alisson</h2>
             <h3>
-                "... e quando caca a amizade não teve mais para onde crescer, ela virou amor!"
+                "... e quando a amizade não teve mais para onde crescer, ela virou amor!"
             </h3>
             
         </nav>
