--- a/contato.html
+++ b/contato.html
@@ -8,14 +8,13 @@
     <title>Suellen & Alisson</title>
     <link rel="stylesheet" href="./css/fundo.css">
     <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/cronometro.css">
+    <link rel="stylesheet" href="./css/sobre.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=The+Nautigal&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <nav>
         <ul class="menu">
             <li><a href="index.html">Bem Vindo</a></li>
@@ -29,48 +28,32 @@
             <li><a href="#">Presentes</a>
                 <ul>
                     <li><a href="#">Sujestão de Presentes</a></li>
-                    <li><a href="transferencia.html">Transferência</a></li>
+                    <li><a href="transferencia.html">Trânsferencia</a></li>
                 </ul>
             </li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <div class="nomenoivos">
-        <nav>
-            <h2>Suellen & Alisson</h2>
-            <h3>
-                "... e quando a amizade não teve mais para onde crescer, ela virou amor!"
-            </h3>
-            
-        </nav>
     </div>
- <div class="screen">
-    <div class="msgECronometro">
-        <div id="cronometro">
-            <div>
-                <span class="days" id="day"></span>
-                <div class="smalltext">Dias</div>
+    <div class="contato">    
+        <div class="noivos">
+            <H1>Entre em contato com os Noivos</H1>
+            <div class="suellen">
+                <pre>
+Suellen
+Tel.: 75 8127-9184
+E-mail.:
+                </pre>
             </div>
-            <div>
-                <span class="hours" id="hour"></span>
-                <div class="smalltext">Horas</div>
-            </div>
-            <div>
-                <span class="minutes" id="minute"></span>
-                <div class="smalltext">Minutos</div>
-            </div>
-            <div>
-                <span class="seconds" id="second"></span>
-                <div class="smalltext">Segundos</div>
+            <div class="alisson">
+                <pre>
+Alisson
+Tel.: 11 9 92325271
+E-mail.: alisson.a-work@outlook.com
+                </pre>
             </div>
         </div>
-        <div class="mensagemCronometro">
-            <h1>Contagem Regressiva</h1>
-            <p>Estamos ansiosos <br>
-                Junte-se a nós nessa espera</p>
-        </div>
     </div>
-</div>
     <script src="./Source/cronometro.js"></script>
 </body>
 
