--- a/sobre.html
+++ b/sobre.html
@@ -31,7 +31,7 @@
                     <li><a href="transferencia.html">Trânsferencia</a></li>
                 </ul>
             </li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
     </div>
