--- a/ocasamento.html
+++ b/ocasamento.html
@@ -32,7 +32,7 @@
                     <li><a href="transferencia.html">Trânsferencia</a></li>
                 </ul>
             </li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
     <div class="nomenoivos">
