inserindo o contato da suellen

--- a/contato.html
+++ b/contato.html
@@ -41,8 +41,8 @@
             <div class="suellen">
                 <pre>
 Suellen
-Tel.: 75 8127-9184
-E-mail.:
+Tel.: 75 9 8127-9184
+E-mail.: ingrid.suellen260@gmail.com
                 </pre>
             </div>
             <div class="alisson">
