--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <title>Suellen & Alisson</title>
     <link rel="stylesheet" href="./css/fundo.css">
     <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/sobre.css">
+    <link rel="stylesheet" href="./css/contato.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=The+Nautigal&display=swap" rel="stylesheet">
