--- a/sobre.html
+++ b/sobre.html
@@ -35,7 +35,15 @@
         </ul>
     </nav>
     </div>
+    <div class="centralizartexto">
+        <div class="texto">     
+        <h1>Aqui vai o titulo</h1>
+        <pre>
+Aqui vai o texto TOP
 
+            </pre>
+        </div>
+    </div>
     <!-- 
     <div class="mapa">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3899.819966988719!2d-38.9115616!3d-12.1926502!2m3!1f0!2f0!3f0!3m2!1i
