--- a/transferencia.html
+++ b/transferencia.html
@@ -42,14 +42,16 @@
        <div>
         <h1>"Faça parte desse Sonho"</h1>
         <span class="qrcode">
-            <img src="./img/PIX_QRCODE.jpg" alt="" srcset="">
+            <img src="./img/PIX_QRCODE.jpg" alt="">
         </span>
         <h2>
             Escaneie o código acima com o seu app do banco ou <a href="https://nubank.com.br/pagar/4ceqf/1b0aXQCZfw" target="_blank">Clique aqui</a>
             para fazer a transferência.
         </h2>
        </div>
-       <img src="./img/patinhas.gif" alt="">   
+       <div>
+            <img src="./img/patinhas.gif" alt="">
+       </div>   
     </div>
     
     <script src="./Source/cronometro.js"></script>
