teste tamanho tela inicial

--- a/ocasamento.html
+++ b/ocasamento.html
@@ -40,12 +40,12 @@
             <h2>Suellen & Alisson</h2>
             <h3>
 <pre> 
-Você esta convidado para o nosso casamento
-Que se realizará na:
+Você esta convidado para o nosso
+casamento que se realizará na:
 Rua.:
 Numero.:
-Estado.:
-Pais.:
+Estado.: Bahia
+Pais.: Brasil
 </pre>
             </h3>
         </nav>
