--- a/sugestao.html
+++ b/sugestao.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suellen & Alisson</title>
+    <link rel="stylesheet" href="./css/fundo.css">
     <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/cronometro.css">
-    <link rel="stylesheet" href="./css/ocasamento.css">
-
+    <link rel="stylesheet" href="./css/sujestao.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=The+Nautigal&display=swap" rel="stylesheet">
@@ -35,31 +34,36 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <div class="nomenoivos">
-        <nav>
-            <h2>Suellen & Alisson</h2>
-            <h3>
-<pre> 
-Você esta convidado para o nosso
-casamento que se realizará na:
-Rua.:
-Numero.:
-Estado.: Bahia
-Pais.: Brasil
-</pre>
-            </h3>
-        </nav>
     </div>
+    <div class="centralizartexto">
+        <div class="texto">     
+            <h1>Sujestão de Presentes</h1>
+            <p>
+                Os presentes listados abaixo são somente 
+                sujestões, não são obrigatorios. Caso não 
+                tenha condições ou não queira dar um presente
+                da lista fique a vontade.
+                <br>
+                Obrigatorio é o seu abraço, o seu afeto e 
+                principalmente sua presença.
+            </p>
+           <div class="sugestoes">
+                <p>
+                    1 - Geladeira 
+                </p>
+                <p>
+                    2 - Fogão
+                </p>
+           </div>
+        </div>
+    </div>
+    <!-- 
     <div class="mapa">
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3897.
-            650927125951!2d-38.95427658518444!3d-12.339265991272928!2m3!1f0!2f0!3f0!3m
-            2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbca6d27f3ce3b71f!2zMTLCsDIwJzIxLjQiU
-            yAzOMKwNTcnMDcuNSJX!5e0!3m2!1spt-BR!2sbr!4v1657996486385!5m2!1spt-BR!2sbr" 
-            style="border:0;" allowfullscreen="" loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
-    </div>
-    </div> 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3899.819966988719!2d-38.9115616!3d-12.1926502!2m3!1f0!2f0!3f0!3m2!1i
+        1024!2i768!4f13.1!3m3!1m2!1s0x714395dad79398b%3A0x16467942fe2af357!2sEstr.%20da%20Tapera%2C%20Feira%20de%20Santana%20-%20BA%2C%2044069-040
+        !5e0!3m2!1spt-BR!2sbr!4v1657621860318!5m2!1spt-BR!2sbr"  style="border:0;" allowfullscreen="" loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div> -->
     <script src="./Source/cronometro.js"></script>
 </body>
 
