Botão imprimir convite

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3>
                 "... e quando a amizade não teve mais para onde crescer, ela virou amor!"
             </h3>
-            
+           
         </nav>
     </div>
  <div class="screen">
@@ -71,7 +71,18 @@
         </div>
     </div>
 </div>
+<div class="convite">
+        <iframe 
+        src="./doc/Requerimento.pdf" id="myFrame" 
+            frameborder="0" style="border:0;" 
+                width="300" height="300">
+        </iframe>
+<p>
+    <input type="button" id="bt" onclick="print()" value="Imprima o seu convite" />
+</p>
+</div>
     <script src="./Source/cronometro.js"></script>
+    <script src="./Source/impressao.js"></script>
 </body>
 
 </html>
