--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 width="300" height="300">
         </iframe>
 <p>
-    <input type="button" id="bt" onclick="print()" value="Imprima o seu convite" />
+    <button id="bt" onclick="print()" value="Imprima o seu convite">Imprima o seu convite</button>
+    <!-- <input type="button" id="bt" onclick="print()" value="Imprima o seu convite" /> -->
 </p>
 </div>
     <script src="./Source/cronometro.js"></script>
