implantando nova disponibilidade

--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
             <li><a href="#">O Casamento</a>
                 <ul>
                     <li><a href="ocasamento.html">O Casamento</a></li>
-                    <li><a href="#">Galeria</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
                 </ul>
             </li>
             <li><a href="#">Presentes</a>
