melhorando layout e seta

--- a/galeria.html
+++ b/galeria.html
@@ -55,8 +55,12 @@
           <div class="gallery__item bg-11"></div>
           <div class="gallery__item bg-12"></div>
           <div class="gallery__item bg-13"></div>
+          
         </div>
+        <div id="seta"></div>
+        
       </div>
+      <div id="setad"></div>
       <script>
  
     </script>
