--- a/galeria.html
+++ b/galeria.html
@@ -48,13 +48,13 @@
           <div class="gallery__item bg-4"></div>
           <div class="gallery__item bg-5"></div>
           <div class="gallery__item bg-6"></div>
-          <div class="gallery__item bg-7"></div>
+          <!-- <div class="gallery__item bg-7"></div>
           <div class="gallery__item bg-8"></div>
           <div class="gallery__item bg-9"></div>
           <div class="gallery__item bg-10"></div>
           <div class="gallery__item bg-11"></div>
           <div class="gallery__item bg-12"></div>
-          <div class="gallery__item bg-13"></div>
+          <div class="gallery__item bg-13"></div> -->
           
         </div>
         <div id="seta"></div>
