--- a/galeria.html
+++ b/galeria.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/galeria.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/fundo.css">
+    <link rel="stylesheet" href="./css/music.css">
 
     <script src="jquery/jquery-3.6.0.min.js"></script>
 </head>
@@ -61,9 +62,10 @@
         
       </div>
       <div id="setad"></div>
-      <script>
- 
-    </script>
+        <audio id="playAudio" autoplay controls>
+            <source src="./music/Velha Infância (2004 Digital Remaster)(MP3_128K).mp3" type="audio/mpeg">
+            O seu navegador não suporta o elemento <code>audio</code>
+        </audio>
     <script src="./Source/galeria.js"></script>
 </body>
 </html>
