--- a/sugestao.html
+++ b/sugestao.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=The+Nautigal&display=swap" rel="stylesheet">
 </head>
-
 <body>
+ 
     <nav>
         <ul class="menu">
             <li><a href="index.html">Bem Vindo</a></li>
@@ -37,34 +37,29 @@
     </div>
     <div class="centralizartexto">
         <div class="texto">     
-            <h1>Sujestão de Presentes</h1>
+            <h1>Sugestão de Presentes</h1>
             <p>
                 Os presentes listados abaixo são somente 
-                sujestões, não são obrigatorios. Caso não 
+                sugestões, não são obrigatorios. Caso não 
                 tenha condições ou não queira dar um presente
                 da lista fique a vontade.
                 <br>
                 Obrigatorio é o seu abraço, o seu afeto e 
                 principalmente sua presença.
             </p>
+            
            <div class="sugestoes">
                 <p>
-                    1 - Geladeira 
+                    <button id="geladeira">1 - Geladeira</button>
                 </p>
                 <p>
-                    2 - Fogão
+                    
+                    <button id="fogao">2 - Fogão</button>
                 </p>
            </div>
         </div>
     </div>
-    <!-- 
-    <div class="mapa">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3899.819966988719!2d-38.9115616!3d-12.1926502!2m3!1f0!2f0!3f0!3m2!1i
-        1024!2i768!4f13.1!3m3!1m2!1s0x714395dad79398b%3A0x16467942fe2af357!2sEstr.%20da%20Tapera%2C%20Feira%20de%20Santana%20-%20BA%2C%2044069-040
-        !5e0!3m2!1spt-BR!2sbr!4v1657621860318!5m2!1spt-BR!2sbr"  style="border:0;" allowfullscreen="" loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div> -->
-    <script src="./Source/cronometro.js"></script>
+    <script src="./Source/buscar.js"></script>
 </body>
 
 </html>
