melhorando pelo pc

--- a/galeria.html
+++ b/galeria.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/fundo.css">
     <link rel="stylesheet" href="./css/music.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC&display=swap" rel="stylesheet">
     <script src="jquery/jquery-3.6.0.min.js"></script>
 </head>
 <body>
