--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <link rel="stylesheet" href="./css/fundo.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/cronometro.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=The+Nautigal&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC&display=swap" rel="stylesheet">
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -78,8 +85,8 @@
                 width="300" height="300">
         </iframe>
 <p>
-    <button id="bt" onclick="print()" value="Imprima o seu convite">Imprima o seu convite</button>
-    <!-- <input type="button" id="bt" onclick="print()" value="Imprima o seu convite" /> -->
+    <button id="bt"  onclick="print()" value="Imprima o seu convite">Imprima o seu convite</button>
+    <a href="./fotos/convite.jpg" id="bt" download="Suellen&Alisson">Baixe o seu convite</a>
 </p>
 </div>
     <script src="./Source/cronometro.js"></script>
