mudando identificado de botao

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </div>
 <div class="convite">
         <iframe 
-        src="./doc/Requerimento.pdf" id="myFrame" 
+        src="./fotos/convite.jpg" id="myFrame" 
             frameborder="0" style="border:0;" 
                 width="300" height="300">
         </iframe>
@@ -88,7 +88,7 @@
     <button id="bt"  onclick="print()" value="Imprima o seu convite">Imprima o seu convite</button>
 </p>
 <p>
-    <a href="./fotos/convite.jpg" id="bt" download="Suellen&Alisson">Baixe o seu convite</a>
+    <a href="./fotos/convite.jpg" class="baixa" download="Suellen&Alisson">Baixe o seu convite</a>
 </p>
 </div>
     <script src="./Source/cronometro.js"></script>
